themes/default/layout.css
/* Lichen 0.3 - http://lichen-mail.org/
   Interface layout stylesheet

Take care when editing this file: it contains positioning rules for
interface elements. If you only want to change Lichen's appearance
without moving things around, edit default.css instead.

Distributed under the GNU General Public License
(see license.html for details) */

/* Display panels - message list, message display, options, and compose */

#msg-wrapper, #comp-wrapper, #opts-wrapper, #addr-wrapper, #notification, #msg-bar, #comp-bar, #opts-bar { display: none; }

#list-wrapper, #msg-wrapper, #comp-wrapper, #opts-wrapper { position: absolute; top: 47px; left: 118px; }

/* List of mailboxes */

#mailboxes { position: absolute; top: 2px; left: 2px; width: 114px; margin: 0; padding-top: 59px; padding-left: 0; padding-right: 0; }
#mailboxes li { display: block; white-space: nowrap; }

/* Toolbars */

.toolbar { position: absolute; margin: 0; top: 12px; left: 118px; }
.toolbar li { display: inline; }

#corner-bar { right: 10px; text-align: right; }
#btn-logout { margin-right: 5px; }

/* Mailbox message listings */

#list-wrapper table { clear: both; table-layout: fixed; width: 100%; }

.subject, .sender, .date { white-space: nowrap; overflow: hidden; }

.mcol-checkbox { width: 22px; }
.mcol-flag { width: 26px; }
.mcol-sender { width: 200px; }
.mcol-size { width: 75px; }
.mcol-date { width: 125px; }

div.sender { width: 190px; }
div.size { width: 65px; margin-left: 10px; }
div.date { width: 115px; margin-left: 10px; }

/* Login screen */

form.login { position: absolute; top: 120px; left: 0; width: 700px; height: 380px; }

.input-block { position: absolute; top: 172px; left: 260px; width: 320px; }

/* New message form */

.comp-label { clear: both; float: left; width: 120px; margin: 2px 0 0 8px; }

#comp-identity, #comp-to, #comp-cc, #comp-bcc, #comp-subj { width: 452px; margin-bottom: 8px; }
#comp-to, #comp-cc, #comp-bcc { height: 48px; }
#comp-msg { clear: both; width: 580px; height: 370px; margin-top: 5px; }

.sidebar-panel { width: 240px; }
#comp-attachments { position: absolute; top: 84px; left: 600px; }

/* Options panel */

form#settings { width: 100%; }
/* .opts-tab { display: none; } */

/* Notification messages */

#notification { position: absolute; top: 7px; right: 210px; width: 300px; z-index: 9; }

